# fermi-predict

./: .gitignore  main.py  predict.py  preprocess.py  pyproject.toml  requirements.txt
models/: linear_regression_model.pkl
