[tool.poetry]
name = "fermi-predict"
version = "0.1.0"
description = ""
authors = ["leon <90852553+leon0719@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fermi_predict"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
scikit-learn = "1.2.2"
ase = "^3.22.1"
pandas = "1.5.3"
numpy = "1.23.5"
streamlit = "^1.28.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
